crates/es-fluent-derive/tests/snapshots/options_parsing_tests__enum_choice_parsing.snap
---
source: crates/es-fluent-derive/tests/options_parsing_tests.rs
assertion_line: 276
expression: "&opts"
---
EnumChoiceOpts {
    ident: Ident(
        MyEnum,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Enum(
        [
            Ignored,
            Ignored,
        ],
    ),
    attr_args: EnumChoiceAttributeArgs {
        serialize_all: Some(
            "snake_case",
        ),
    },
}
