crates/es-fluent-derive/tests/snapshots/options_parsing_tests__enum_fluent_with_namespace_literal.snap
---
source: crates/es-fluent-derive/tests/options_parsing_tests.rs
expression: "&opts"
---
EnumOpts {
    ident: Ident {
        sym: ApiError,
    },
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Enum(
        [
            VariantOpts {
                ident: Ident {
                    sym: NotFound,
                },
                fields: Fields {
                    style: Unit,
                    fields: [],
                    span: Some(
                        bytes(0..0),
                    ),
                    __nonexhaustive: (),
                },
                skip: None,
                key: None,
                arg_name: None,
            },
            VariantOpts {
                ident: Ident {
                    sym: Unauthorized,
                },
                fields: Fields {
                    style: Unit,
                    fields: [],
                    span: Some(
                        bytes(0..0),
                    ),
                    __nonexhaustive: (),
                },
                skip: None,
                key: None,
                arg_name: None,
            },
        ],
    ),
    attr_args: EnumFluentAttributeArgs {
        resource: None,
        skip_inventory: None,
        namespace: Some(
            Literal(
                "errors",
            ),
        ),
    },
}
