crates/es-fluent-derive/tests/snapshots/options_parsing_tests__struct_fluent_parsing.snap
---
source: crates/es-fluent-derive/tests/options_parsing_tests.rs
assertion_line: 211
expression: "&opts"
---
StructOpts {
    ident: Ident(
        MyStruct,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Struct(
        Fields {
            style: Struct,
            fields: [
                StructFieldOpts {
                    ident: Some(
                        Ident(
                            a,
                        ),
                    ),
                    ty: Type::Path {
                        qself: None,
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        i32,
                                    ),
                                    arguments: PathArguments::None,
                                },
                            ],
                        },
                    },
                    skip: None,
                    default: None,
                    choice: None,
                    value: None,
                    arg_name: None,
                },
                StructFieldOpts {
                    ident: Some(
                        Ident(
                            b,
                        ),
                    ),
                    ty: Type::Path {
                        qself: None,
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        String,
                                    ),
                                    arguments: PathArguments::None,
                                },
                            ],
                        },
                    },
                    skip: Some(
                        true,
                    ),
                    default: None,
                    choice: None,
                    value: None,
                    arg_name: None,
                },
                StructFieldOpts {
                    ident: Some(
                        Ident(
                            c,
                        ),
                    ),
                    ty: Type::Path {
                        qself: None,
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        bool,
                                    ),
                                    arguments: PathArguments::None,
                                },
                            ],
                        },
                    },
                    skip: None,
                    default: None,
                    choice: Some(
                        true,
                    ),
                    value: None,
                    arg_name: None,
                },
            ],
            span: Some(
                Span,
            ),
            __nonexhaustive: (),
        },
    ),
    attr_args: StructFluentAttributeArgs {
        derive: PathList(
            [],
        ),
        namespace: None,
    },
}
