crates/es-fluent-derive/tests/snapshots/options_parsing_tests__struct_fluent_with_namespace_file.snap
---
source: crates/es-fluent-derive/tests/options_parsing_tests.rs
assertion_line: 304
expression: "&opts"
---
StructOpts {
    ident: Ident(
        Dialog,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Struct(
        Fields {
            style: Struct,
            fields: [
                StructFieldOpts {
                    ident: Some(
                        Ident(
                            title,
                        ),
                    ),
                    ty: Type::Path {
                        qself: None,
                        path: Path {
                            leading_colon: None,
                            segments: [
                                PathSegment {
                                    ident: Ident(
                                        String,
                                    ),
                                    arguments: PathArguments::None,
                                },
                            ],
                        },
                    },
                    skip: None,
                    default: None,
                    choice: None,
                    value: None,
                    arg_name: None,
                },
            ],
            span: Some(
                Span,
            ),
            __nonexhaustive: (),
        },
    ),
    attr_args: StructFluentAttributeArgs {
        derive: PathList(
            [],
        ),
        namespace: Some(
            File,
        ),
    },
}
